clusters/homelab/apps/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: enabled
    argocd.argoproj.io/managed-by: argocd
