clusters/homelab/apps/monitoring/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards-lb
  namespace: opensearch
spec:
  type: LoadBalancer
  selector:
    app: opensearch-dashboards
  ports:
    - name: http
      port: 5601
      targetPort: 5601
